--- a/classification_NN_task/DistributerGradientTrakingOfNNClassifier__V2.ipynb
+++ b/classification_NN_task/DistributerGradientTrakingOfNNClassifier__V2.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "e66499f0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "##############################################################\n",
@@ -19,7 +23,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "7e4164ba",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -63,7 +71,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "095b0383",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -98,7 +110,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "fdf98d24",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -141,7 +157,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "0875da4e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -169,7 +189,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "a197206f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -197,7 +221,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "f00cdb4b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -256,7 +284,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "0296bf49",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#                              Data acquisition and processing\n",
@@ -278,7 +310,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "e3ec0302",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -314,7 +350,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "79d59547",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -347,7 +387,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "bb2e03cd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#                Random redistribution of the data in two sets ( test and train)\n",
@@ -359,7 +403,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "0aa0e179",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#                      Reassignment of the labels according to the requirements [1, -1]\n",
@@ -384,7 +432,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "8ca185f8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -539,7 +591,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "bea2d31b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -570,7 +626,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "7fd698f0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -617,7 +677,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "73a79b08",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -646,7 +710,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "c1f4f77d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ZeroVector = np.zeros(784+1)# vector of zeros which will be used in the future"
@@ -656,7 +724,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "876bfc3b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# function that returns the average of a sequence of numbers\n",
@@ -670,7 +742,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "08ef4b1d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -746,7 +822,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "624b43a4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -777,7 +857,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "d78cd97e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -808,7 +892,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "45f84125",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -838,7 +926,11 @@
    "cell_type": "code",
    "execution_count": 80,
    "id": "f3b375c4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#                  Subdivision of the dataset (images and labels) between all the nodes\n",
@@ -856,7 +948,11 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "2301bb02",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -879,7 +975,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "06b7a6de",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2165,7 +2265,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "ba47e69e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2201,7 +2305,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "335a1ea5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2268,7 +2376,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "48e525a7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#np.shape(ZeroVector)\n",
@@ -2280,7 +2392,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "ee32b593",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2310,7 +2426,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "a219ce14",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2356,7 +2476,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "461a006b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2389,7 +2513,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "3a234ed0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#                                loading the weights of uu and the values of J (cost vector)\n",
@@ -2402,7 +2530,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "fd6f7601",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2438,7 +2570,11 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "64011184",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#                                         Validation function\n",
@@ -2471,7 +2607,11 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "f3b92973",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2494,7 +2634,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5748ec52",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -2502,7 +2646,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "28bbfd34",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -2510,7 +2658,11 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "a063b748",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2534,7 +2686,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f889f559",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -2542,7 +2698,11 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "31a0a0a2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# https://towardsdatascience.com/what-to-do-when-your-classification-dataset-is-imbalanced-6af031b12a36\n",
@@ -2555,7 +2715,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11e30c7d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -2563,7 +2727,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "775e8844",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -2571,7 +2739,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9404c345",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -2579,7 +2751,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "88d2f30a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
