--- a/classification_NN_task/Roman_Distributed_ClassificatoreV4.ipynb
+++ b/classification_NN_task/Roman_Distributed_ClassificatoreV4.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b24fa964",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "##############################################################\n",
@@ -19,7 +23,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3ede3818",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -53,7 +61,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "060d4704",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()\n",
@@ -69,7 +81,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "248c7c9d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -104,7 +120,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "f8ee9fb9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -139,7 +159,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "429bfe16",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\"\"\"                                       THE ERROR COULD BE HERE                                                \"\"\"\n",
@@ -151,7 +175,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "672f5a2d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -185,7 +213,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "6db5d945",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -338,7 +370,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "f0f9b6ce",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -368,7 +404,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "69c7f24b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -414,7 +454,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "acb9839b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -441,7 +485,11 @@
   {
    "cell_type": "markdown",
    "id": "7472451d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The erlier part was a preprocessing of the data, now we will use distributed gradient traking for the training of the neural network.\n",
     "-"
@@ -451,7 +499,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "90f9929d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# example \n",
@@ -468,7 +520,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "33e5fa1c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -490,11 +546,11 @@
      "evalue": "name 'T' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 163>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    167\u001b[0m \u001b[38;5;66;03m# Backward propagation\u001b[39;00m\n\u001b[1;32m    168\u001b[0m llambdaT \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m( xx[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m label_point[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;66;03m# xT . LambdaT = 2*(-LablePoint)\u001b[39;00m\n\u001b[0;32m--> 169\u001b[0m Delta_u \u001b[38;5;241m=\u001b[39m \u001b[43mbackward_pass\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxx\u001b[49m\u001b[43m,\u001b[49m\u001b[43muu\u001b[49m\u001b[43m,\u001b[49m\u001b[43mllambdaT\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# the gradient of the loss function \u001b[39;00m\n\u001b[1;32m    171\u001b[0m \u001b[38;5;66;03m# Update the weights\u001b[39;00m\n\u001b[1;32m    172\u001b[0m uu \u001b[38;5;241m=\u001b[39m uu \u001b[38;5;241m-\u001b[39m stepsize\u001b[38;5;241m*\u001b[39mDelta_u \u001b[38;5;66;03m# overwriting the old value\u001b[39;00m\n",
-      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36mbackward_pass\u001b[0;34m(xx, uu, llambdaT)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbackward_pass\u001b[39m(xx,uu,llambdaT):\n\u001b[1;32m    116\u001b[0m   \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    117\u001b[0m \u001b[38;5;124;03m    input: \u001b[39;00m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;124;03m              xx state trajectory: x[1],x[2],..., x[T]\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;124;03m              delta_u costate output, i.e., the loss gradient\u001b[39;00m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n\u001b[0;32m--> 125\u001b[0m   llambda \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[43mT\u001b[49m,d))\n\u001b[1;32m    126\u001b[0m   llambda[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m llambdaT\n\u001b[1;32m    128\u001b[0m   Delta_u \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((T\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,d,d\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'T' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [13]\u001B[0m, in \u001B[0;36m<cell line: 163>\u001B[0;34m()\u001B[0m\n\u001B[1;32m    167\u001B[0m \u001B[38;5;66;03m# Backward propagation\u001B[39;00m\n\u001B[1;32m    168\u001B[0m llambdaT \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m2\u001B[39m\u001B[38;5;241m*\u001B[39m( xx[\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m-\u001B[39m label_point[\u001B[38;5;241m0\u001B[39m]) \u001B[38;5;66;03m# xT . LambdaT = 2*(-LablePoint)\u001B[39;00m\n\u001B[0;32m--> 169\u001B[0m Delta_u \u001B[38;5;241m=\u001B[39m \u001B[43mbackward_pass\u001B[49m\u001B[43m(\u001B[49m\u001B[43mxx\u001B[49m\u001B[43m,\u001B[49m\u001B[43muu\u001B[49m\u001B[43m,\u001B[49m\u001B[43mllambdaT\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;66;03m# the gradient of the loss function \u001B[39;00m\n\u001B[1;32m    171\u001B[0m \u001B[38;5;66;03m# Update the weights\u001B[39;00m\n\u001B[1;32m    172\u001B[0m uu \u001B[38;5;241m=\u001B[39m uu \u001B[38;5;241m-\u001B[39m stepsize\u001B[38;5;241m*\u001B[39mDelta_u \u001B[38;5;66;03m# overwriting the old value\u001B[39;00m\n",
+      "Input \u001B[0;32mIn [13]\u001B[0m, in \u001B[0;36mbackward_pass\u001B[0;34m(xx, uu, llambdaT)\u001B[0m\n\u001B[1;32m    115\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mbackward_pass\u001B[39m(xx,uu,llambdaT):\n\u001B[1;32m    116\u001B[0m   \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    117\u001B[0m \u001B[38;5;124;03m    input: \u001B[39;00m\n\u001B[1;32m    118\u001B[0m \u001B[38;5;124;03m              xx state trajectory: x[1],x[2],..., x[T]\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    123\u001B[0m \u001B[38;5;124;03m              delta_u costate output, i.e., the loss gradient\u001B[39;00m\n\u001B[1;32m    124\u001B[0m \u001B[38;5;124;03m  \"\"\"\u001B[39;00m\n\u001B[0;32m--> 125\u001B[0m   llambda \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros((\u001B[43mT\u001B[49m,d))\n\u001B[1;32m    126\u001B[0m   llambda[\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m=\u001B[39m llambdaT\n\u001B[1;32m    128\u001B[0m   Delta_u \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros((T\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m,d,d\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m))\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'T' is not defined"
      ]
     }
    ],
@@ -690,7 +746,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b8ad1c50",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "print(len(xx))\n",
@@ -705,7 +765,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "27fc43ef",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "xt = np.array([0.77687937, 0.08063935, 0.01138057, 0.122775, 0.45234997, 0.31188696, 0.90724203, 0.56045335, 0.77011777, 0.47297238])\n",
@@ -719,7 +783,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "affd82cb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -727,7 +795,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f10362dd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -735,7 +807,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d6972fcf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -743,7 +819,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b8cb165",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -751,7 +831,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b536e9e1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -759,7 +843,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4a54b9bf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -767,7 +855,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59dde5a2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.matshow(x_train[99])# i wanted to see the 100 image \n",
@@ -781,7 +873,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "871a9f9b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "x_train = x_train/255# used for scaling of the numbers rappresenting the color of the image\n",
@@ -793,7 +889,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d27ed547",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# same thing as above ( just to see if the conversion were done correctly )\n",
@@ -808,7 +908,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ea8e6f0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# display the first 25 training images with labels and verify that the data is in the correct formate.\n",
@@ -827,7 +931,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c08e406d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Creation of the structure of neural network\n",
@@ -842,7 +950,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "06849e09",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configuration of neural network \n",
@@ -855,7 +967,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "90907093",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -872,7 +988,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ad477e92",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# training of the model \n",
@@ -883,7 +1003,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7ad8bfcf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Evaluate accuracy\n",
@@ -895,7 +1019,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c1deee89",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -907,7 +1035,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "775c7e06",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -920,7 +1052,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4eff0848",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Prediction for single images\n",
@@ -947,7 +1083,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "855d10dd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -955,7 +1095,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "89671bd1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -963,7 +1107,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c804ee67",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
